[tool.poetry]
name = "unnamed-music-visualizer"
version = "0.1.0"
description = ""
authors = ["Anas Badr <anasihabezmc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
